--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>expedition by the morning company</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Web 1920 – 1;
-		--web-view-id: Web_1920___1;
+		--web-view-name: index;
+		--web-view-id: index;
 		--web-scale-to-fit: true;
 		--web-scale-to-fit-type: width;
 		--web-scale-on-resize: true;
@@ -18,7 +18,7 @@
 		--web-page-font: avenir, futura, helvetica, sans-serif;
 	}
 	:root {
-		--web-view-ids: Web_1920___1;
+		--web-view-ids: index;
 	}
 	* {
 		margin: 0;
@@ -26,7 +26,7 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Web_1920___1 {
+	#index {
 		position: absolute;
 		transform: translateY(-50%);
 		top: 50%;
@@ -35,8 +35,8 @@
 		font-family: avenir, futura, helvetica, sans-serif;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
-		--web-view-name: Web 1920 – 1;
-		--web-view-id: Web_1920___1;
+		--web-view-name: index;
+		--web-view-id: index;
 		--web-scale-to-fit: true;
 		--web-scale-to-fit-type: width;
 		--web-scale-on-resize: true;
@@ -3662,7 +3662,7 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Web_1920___1">
+<div id="index">
 	<div id="Group_67">
 		<div id="Group_53">
 			<div id="Group_52">
@@ -3922,11 +3922,9 @@ window.application = new Application();
 		</a>
 	</div>
 	<div id="Group_73">
-		<a href="https://themorningcompany.github.io">
 		<div id="built_to_be_private_">
 			<span>built to be private.</span>
 		</div>
-		</a>
 		<div id="expedition_was_created_to_give">
 			<span>expedition was created to give more privacy than other mainstream browsers. this is why it has the ability to automatically clear data as you browse, as well as history. an integrated adblock is in the beta phase.</span>
 		</div>
