--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>expedition by the morning company</title>
+<title>expedition</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: index;
@@ -15,7 +15,7 @@
 		--web-center-vertically: true;
 		--web-refresh-for-changes: true;
 		--web-enable-deep-linking: true;
-		--web-page-font: avenir, futura, helvetica, sans-serif;
+		--web-page-font: avenir,futura,helvetica,sans-serif;
 	}
 	:root {
 		--web-view-ids: index;
@@ -32,7 +32,7 @@
 		top: 50%;
 		width: 2176px;
 		height: 4408px;
-		font-family: avenir, futura, helvetica, sans-serif;
+		font-family: avenir,futura,helvetica,sans-serif;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
 		--web-view-name: index;
@@ -43,7 +43,7 @@
 		--web-center-vertically: true;
 		--web-refresh-for-changes: true;
 		--web-enable-deep-linking: true;
-		--web-page-font: avenir, futura, helvetica, sans-serif;
+		--web-page-font: avenir,futura,helvetica,sans-serif;
 	}
 	#Group_67 {
 		position: absolute;
@@ -671,7 +671,7 @@
 		width: 1875px;
 		height: 122px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 90px;
@@ -687,7 +687,7 @@
 		line-height: 70px;
 		margin-top: -17px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 36px;
@@ -735,7 +735,7 @@
 		width: 1875px;
 		height: 121px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 90px;
@@ -751,7 +751,7 @@
 		line-height: 70px;
 		margin-top: -17px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 36px;
@@ -800,7 +800,7 @@
 		line-height: 70px;
 		margin-top: -15px;
 		text-align: center;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 40px;
@@ -816,7 +816,7 @@
 		line-height: 60px;
 		margin-top: -10px;
 		text-align: center;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 40px;
@@ -1016,7 +1016,7 @@
 		width: 410px;
 		height: 78px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 57px;
@@ -1031,7 +1031,7 @@
 		width: 460px;
 		height: 78px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 57px;
@@ -1053,7 +1053,7 @@
 		width: 1875px;
 		height: 121px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 90px;
@@ -1069,7 +1069,7 @@
 		line-height: 70px;
 		margin-top: -17px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 36px;
@@ -1117,7 +1117,7 @@
 		width: 1875px;
 		height: 121px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 90px;
@@ -1133,7 +1133,7 @@
 		line-height: 70px;
 		margin-top: -17px;
 		text-align: left;
-		font-family: Avenir Next, avenir, futura, helvetica, sans-serif;
+		font-family: Avenir Next, avenir,futura,helvetica,sans-serif;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 36px;
@@ -3743,6 +3743,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_71">
 		<div id="Group_60">
+			<a href="https://themorningcompany.github.io">
 			<div id="Group_59">
 				<svg class="Path_4" viewBox="1.766 0 17.386 21.006">
 					<path fill="rgba(0,0,0,1)" id="Path_4" d="M 13.98972415924072 21.00582695007324 L 6.928476333618164 21.00582695007324 L 6.928476333618164 5.963520050048828 L 1.766000032424927 5.963520050048828 L 1.766000032424927 0 L 19.15220069885254 0 L 19.15220069885254 5.963520050048828 L 13.98972415924072 5.963520050048828 L 13.98972415924072 21.00582695007324 Z">
@@ -3815,6 +3816,7 @@ window.application = new Application();
 					</path>
 				</svg>
 			</div>
+			</a>
 			<div id="Group_85">
 				<div id="Group_53_bq">
 					<div id="Group_52_br">
@@ -3973,6 +3975,7 @@ window.application = new Application();
 			<div id="by">
 				<span>by</span>
 			</div>
+			<a href="https://themorningcompany.github.io">
 			<div id="Group_55">
 				<svg class="Path_4_c" viewBox="1.766 0 23.17 27.994">
 					<path fill="rgba(0,0,0,1)" id="Path_4_c" d="M 18.05644989013672 27.9942798614502 L 8.645986557006836 27.9942798614502 L 8.645986557006836 7.947530746459961 L 1.766000032424927 7.947530746459961 L 1.766000032424927 0 L 24.93643569946289 0 L 24.93643569946289 7.947530746459961 L 18.05644989013672 7.947530746459961 L 18.05644989013672 27.9942798614502 Z">
@@ -4045,6 +4048,7 @@ window.application = new Application();
 					</path>
 				</svg>
 			</div>
+			</a>
 		</div>
 		<a href="https://github.com/TheMorningCompany/Expedition">
 		<div id="get_expedition_button" class="get_expedition_button">
