--- a/Expedition/Searching/NotFoundDark.html
+++ b/Expedition/Searching/NotFoundDark.html
@@ -24,8 +24,8 @@
 	}
 	#NotFoundDark {
 		position: fixed;
-		width: 720px;
-		height: 1280px;
+		width: 100%;
+        height: 100%;
 		background-color: rgba(22,20,20,1);
 		overflow: hidden;
 		--web-view-name: NotFoundDark;
@@ -38,8 +38,9 @@
 		position: absolute;
 		width: 272.358px;
 		height: 338.877px;
-		left: 224px;
-		top: 470.582px;
+		left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
 		overflow: visible;
 	}
 	#Group_265 {
