--- a/NotFoundDark.html
+++ b/NotFoundDark.html
@@ -24,8 +24,8 @@
 	}
 	#NotFoundDark {
 		position: absolute;
-		width: 100%;
-		height: 100%;
+		width: 720px;
+		height: 1280px;
 		background-color: rgba(22,20,20,1);
 		overflow: hidden;
 		--web-view-name: NotFoundDark;
