--- a/Expedition/Resources/NotFound.html
+++ b/Expedition/Resources/NotFound.html
@@ -8,18 +8,24 @@
         
 		<style>
             input {
+                all: unset;
                 position: absolute;
                 display: flex;
                  align-items: center;
                  justify-content: center;
                  text-align: center;
                  transform: translate(-50%, -50%);
-                 bottom: 30px;
+                 bottom: 20px;
                  left: 50%;
                  cursor: pointer;
-                 width: 90%; height: 55px; border-radius: 20px; color: white; background-color: color(display-p3 0.16 0.54 0.8); border: 0; font-size: 14px;
-                     font-family: 'Avenir Next', sans-serif;
-                     font-weight: 600; text-align: center;
+                 width: 90%;
+                 height: 55px;
+                 color: white;
+                 background-color: color(display-p3 0.16 0.54 0.8);
+                 border-radius: 20px;
+                 font-family: "Avenir Next", sans-serif;
+                 font-weight: 500;
+                 font-size: 17px;
             }
 		</style>
 	</head>
