--- a/Expedition/Resources/homepage/homepage.html
+++ b/Expedition/Resources/homepage/homepage.html
@@ -3,13 +3,14 @@
 <html>
 <head>
 <title>expedition home</title>
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
-<link rel="stylesheet" href="homepage.css"
+<link rel="stylesheet" type="text/css" href="homepage.css"
 </head>
 <body>
 
 <div>
-    <img src="expedition.svg" class="logo" alt="Expedition" style="width: 100px;">
+    <img src="expedition.svg" class="logo" alt="Expedition" style="width: 30%;">
 </div>
 
 <!-- <form>
@@ -19,17 +20,17 @@
 <form method="get" action="http://www.duckduckgo.com/" >
     
     <div >
-    <input type="text"   name="q" size="25"  class="sbar" style="width: 90%; height: 50px; border-radius: 20px;" placeholder="search"
-    maxlength="255" value="" />
+    <input type="text"   name="q" size="25"  class="sbar" style="width: 90%; height: 6%; border-radius: 30px;" placeholder="search"
+    maxlength="255" value="" style="font-size: 15%;"/>
     <input type="image" src="sicon.svg" class="btn">
-    <tr><td align="center" style="font-size:14pt">
+    <tr><td align="center" style="font-size: 14pt">
     </td></tr></table>
     </div>
     
 </form>
 
 <div>
-    <img src="logo.svg" class="footer" alt="The Morning Company" style="width: 70px">
+    <img src="logo.svg" class="footer" alt="The Morning Company" style="width: 20%">
 </div>
 
 </body>
