--- a/Expedition/Resources/homepage/homepage.html
+++ b/Expedition/Resources/homepage/homepage.html
@@ -10,7 +10,7 @@
 <body>
 
 <div>
-    <img src="expedition.svg" class="logo" alt="Expedition" style="width: 30%;">
+    <img src="expedition.svg" draggable="false" class="logo" alt="Expedition" style="width: 30%; max-width: 150px;">
 </div>
 
 <!-- <form>
@@ -20,7 +20,7 @@
 <form method="get" action="http://www.duckduckgo.com/" >
     
     <div >
-    <input type="text"   name="q" size="25"  class="sbar" style="width: 90%; height: 9%; border-radius: 20px;" placeholder="search"
+    <input type="text"   name="q" size="25"  class="sbar" style="" placeholder="search"
     maxlength="255" value="" style="font-size: 15%;"/>
     <input type="image" src="sicon.svg" class="btn">
     <tr><td align="center" style="font-size: 14pt">
@@ -30,7 +30,7 @@
 </form>
 
 <div>
-    <img src="logo.svg" class="footer" alt="The Morning Company" style="width: 20%">
+    <img src="logo.svg" draggable="false" class="footer" alt="The Morning Company" style="width: 20%; max-width: 100px;">
 </div>
 
 </body>
